--- a/app/src/main/res/layout/main_flowers_item.xml
+++ b/app/src/main/res/layout/main_flowers_item.xml
@@ -32,8 +32,7 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/rose_2" />
+                    android:layout_height="wrap_content" />
             </androidx.cardview.widget.CardView>
 
             <androidx.appcompat.widget.AppCompatTextView
