--- a/app/src/main/res/layout/fragment_about_one_flower.xml
+++ b/app/src/main/res/layout/fragment_about_one_flower.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutOneFlowerFragment">
+    tools:context=".fragments.AboutOneFlowerFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:scaleType="fitStart"
+                tools:src="@drawable/igles_blue"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
