--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,7 @@
         app:itemBackground="@color/menuStringBgColor"
         app:itemIconTint="@color/black"
         app:itemTextColor="@color/black"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
