--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -11,6 +11,7 @@
     <dimen name="margin_16dp">16dp</dimen>
 
     <dimen name="menu_height">40dp</dimen>
+    <dimen name="basket_item_image">100dp</dimen>
 
 
     <dimen name="main_menu_text_size">8sp</dimen>
