FifthCommit 1. All works, without change in FlowerRepositoryImpl.kt

--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,9 +9,31 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_basket"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/titleColor"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/basket_item" />
-</FrameLayout>
+        tools:listitem="@layout/basket_item"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/summa"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/summa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:fontFamily="@font/lobster"
+        android:layout_marginEnd="@dimen/margin_8dp"
+        tools:text="dfsdf"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/recycler_basket"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_basket"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sendToViber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Заказать"
+        app:layout_constraintEnd_toEndOf="@+id/summa"
+        app:layout_constraintTop_toBottomOf="@+id/summa"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
