--- a/app/src/main/res/layout/basket_item.xml
+++ b/app/src/main/res/layout/basket_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_12dp"
+    android:layout_margin="@dimen/margin_4dp"
     app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,11 +38,55 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lobster"
             android:textSize="20sp"
-            android:layout_margin="@dimen/margin_12dp"
+            android:layout_marginTop="@dimen/margin_12dp"
+            android:layout_marginEnd="25dp"
             android:text="assfsdfsd"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_plus"
+            android:layout_width="@dimen/basket_item_button"
+            android:layout_height="@dimen/basket_item_button"
+            android:background="@drawable/button_basket_style"
+            android:text="+"
+            android:layout_marginBottom="@dimen/margin_8dp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="@+id/cost"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/counter"
+            android:layout_width="40dp"
+            android:layout_height="@dimen/basket_item_button"
+            android:background="@color/white"
+            android:gravity="center"
+            android:inputType="number"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
+            app:layout_constraintTop_toTopOf="@+id/btn_plus" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_minus"
+            android:layout_width="@dimen/basket_item_button"
+            android:layout_height="@dimen/basket_item_button"
+            android:background="@drawable/button_basket_style"
+            android:text="-"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
+            app:layout_constraintEnd_toStartOf="@+id/counter"
+            app:layout_constraintTop_toTopOf="@+id/btn_plus" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/basket_item_button"
+            android:text="Количество:  "
+            android:gravity="center"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_minus"
+            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
+            app:layout_constraintTop_toTopOf="@+id/btn_minus" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 
