--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/margin_8dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginEnd="@dimen/margin_4dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -18,21 +19,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image_category"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_category"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                tools:src="@drawable/igles_blue"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="GHJ"
-            app:layout_constraintTop_toBottomOf="@+id/image_category"
-            app:layout_constraintStart_toStartOf="@+id/image_category"
-            app:layout_constraintEnd_toEndOf="@+id/image_category"/>
+            <TextView
+                android:id="@+id/text_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GHJ"
+                app:layout_constraintTop_toBottomOf="@+id/image_category"
+                app:layout_constraintStart_toStartOf="@+id/image_category"
+                app:layout_constraintEnd_toEndOf="@+id/image_category" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
