--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -12,6 +12,7 @@
 
     <dimen name="menu_height">40dp</dimen>
     <dimen name="basket_item_image">100dp</dimen>
+    <dimen name="basket_item_button">25dp</dimen>
 
 
     <dimen name="main_menu_text_size">8sp</dimen>
