--- a/app/src/main/res/layout/main_flowers_item.xml
+++ b/app/src/main/res/layout/main_flowers_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:lools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/margin_12dp">
 
     <androidx.cardview.widget.CardView
@@ -10,7 +11,6 @@
         android:layout_height="wrap_content"
         android:background="@color/mainBgColor"
         app:cardCornerRadius="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -31,6 +31,7 @@
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image"
+                    lools:src="@drawable/rose_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </androidx.cardview.widget.CardView>
@@ -46,8 +47,6 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/card_image"
                 app:layout_constraintTop_toBottomOf="@+id/card_image" />
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
