--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -32,7 +32,8 @@
                 android:id="@+id/text_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="GHJ"
+                android:textSize="12sp"
+                tools:text="GHJ fsd f dfd"
                 app:layout_constraintEnd_toEndOf="@+id/image_category"
                 app:layout_constraintStart_toStartOf="@+id/image_category"
                 app:layout_constraintTop_toBottomOf="@+id/image_category" />
