--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/titleColor"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:spanCount="2"
             android:orientation="vertical"
             tools:listitem="@layout/main_flowers_item" />
 
