--- a/app/src/main/res/layout/fragment_bonus.xml
+++ b/app/src/main/res/layout/fragment_bonus.xml
@@ -14,7 +14,8 @@
             android:id="@+id/bonus_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
+            android:justificationMode="inter_word"
+            android:gravity="left"
             android:padding="@dimen/padding_16dp"
             android:textColor="@color/black"
             android:textSize="20sp" />
