--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -4,6 +4,6 @@
         name="cached_files"
         path="." />
     <files-path
-        name="images"
+        name="media"
         path="." />
 </paths>
