--- a/app/src/main/res/layout/basket_item.xml
+++ b/app/src/main/res/layout/basket_item.xml
@@ -23,10 +23,10 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="#C1E8FF"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            android:src="@android:drawable/presence_offline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
